--- a/Frontend/CSS/stilus.css
+++ b/Frontend/CSS/stilus.css
@@ -1,1 +1,51 @@
+nav {
+  background-color: #333;
+  padding: 10px;
+  text-align: center;
+}
 
+nav ul {
+  display: grid;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  grid-template-columns: 2fr 2fr;
+}
+nav a {
+  text-decoration: none;
+  color: white;
+  padding: 10px;
+}
+nav a:hover {
+  background-color: #555;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+tr:hover {
+  background-color: #999;
+}
+
+.delete:hover {
+  cursor: pointer;
+}
+.kosar:hover {
+  cursor: pointer;
+}
+.edit, .kesz:hover {
+    cursor: pointer;
+  }
+  
